# ios-ELM-draft

./: .gitignore  README.md  prepare-data.ipynb  pyproject.toml
data - load contents to app files on device/: bias_1.npy  bias_10.npy  bias_11.npy  bias_12.npy  bias_13.npy  bias_14.npy  bias_15.npy  bias_16.npy  bias_17.npy  bias_18.npy  bias_19.npy  bias_2.npy  bias_20.npy  bias_21.npy  bias_3.npy  bias_35.npy  bias_4.npy  bias_5.npy  bias_6.npy  bias_7.npy  bias_8.npy  bias_9.npy  w_1.npy  w_10.npy  w_11.npy  w_12.npy  w_13.npy  w_14.npy  w_15.npy  w_16.npy  w_17.npy  w_18.npy  w_19.npy  w_2.npy  w_20.npy  w_21.npy  w_3.npy  w_37.npy  w_4.npy  w_5.npy  (+6 more)
test-ELM/: AppDelegate.swift  Info.plist  RandomNumbers.swift  ViewController.swift  utils.swift
test-ELM.xcodeproj/: project.pbxproj
test-ELM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test-ELM/Base.lproj/: Main.storyboard
test-ELM/weights/: bias_0.npy  x1k.npy  xs.npy  y.npy
