[tool.poetry]
name = "ios-elm-draft"
version = "0.1.0"
description = ""
authors = ["Anton Akusok <akusok.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
jupyterlab = "^4.0.6"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
